fixed DataUtils and DifferTest